--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -1,3 +1,16 @@
 * {
   outline: none !important;
 }
+
+#register-form,
+#login-form {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 450px;
+}
+
+.required-label {
+  color: crimson;
+}
+
+// rgba(0,0,0,0.14)
