--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -1,5 +1,12 @@
+// @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin');
+
 * {
   outline: none !important;
+}
+
+body {
+  font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #register-form,
