Added trinket list and equipment list

--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -46,3 +46,4 @@ body {
 // rgba(0,0,0,0.14)
 // #5c7080 - blueprintjs blue-ish text
 // #ebf1f5 - blueprintjs blue-ish background color
+// rgba(191,204,214,.2) - blueprintjs table row background color
