Adjusted the item variable naming; added language list and damage type list

--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -28,6 +28,14 @@ body {
   tr {
     cursor: pointer;
   }
+
+  &.no-modal {
+    tbody {
+      tr {
+        cursor: initial;
+      }
+    }
+  }
 }
 
 .info-link {
