--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -9,6 +9,7 @@
 // #5c7080 - blueprintjs blue-ish text
 // #ebf1f5 - blueprintjs blue-ish background color
 // rgba(191,204,214,.2) - blueprintjs table row background color
+// Montserrat,Helvetica Neue,Arial,sans-serif
 body {
   font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -61,6 +62,21 @@ body {
   border-top: none;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
+}
+
+// Feather icons
+.feather {
+  display: inline-block;
+  height: 16px;
+  vertical-align: text-top;
+  width: 16px;
+}
+
+.input-group-addon {
+  .feather {
+    height: 20px;
+    width: 20px;
+  }
 }
 
 // Flexbox rows/columns //
