--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -11,6 +11,7 @@
 // rgba(191,204,214,.2) - blueprintjs table row background color
 // Montserrat,Helvetica Neue,Arial,sans-serif
 body {
+  background-color: #fafafa;
   font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
