--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -15,8 +15,7 @@ body {
   font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#register-form,
-#login-form {
+.single-form-panel {
   margin-left: auto;
   margin-right: auto;
   max-width: 450px;
