--- a/client/src/assets/css/styles.scss
+++ b/client/src/assets/css/styles.scss
@@ -11,7 +11,6 @@
 // rgba(191,204,214,.2) - blueprintjs table row background color
 // Montserrat,Helvetica Neue,Arial,sans-serif
 body {
-  background-color: #fafafa;
   font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -45,9 +44,9 @@ body {
   .list-entry-panel {
     &:hover {
       cursor: pointer;
-      box-shadow: 0 2px 10px 2px #dddddd;
+      box-shadow: 0 2px 10px 2px #000;
     }
-  
+
     .list-entry-title {
       font-size: 2rem;
       font-weight: bold;
@@ -56,7 +55,7 @@ body {
       text-overflow: ellipsis;
       white-space: nowrap;
     }
-  
+
     .list-entry-detail {
       max-width: 100%;
       overflow: hidden;
@@ -80,12 +79,8 @@ body {
   }
 }
 
-.class-info {
-  .list-group-item {
-    border: none;
-    padding-bottom: 7px;
-    padding-top: 7px;
-  }
+.list-group-item {
+  background-color: transparent;
 }
 
 .info-link,
@@ -94,11 +89,6 @@ body {
   cursor: pointer;
   text-decoration: underline !important;
   text-decoration-style: dotted !important;
-}
-
-.modal-body,
-.modal-footer {
-  background-color: #ebf1f5;
 }
 
 .modal-title {
