--- a/client2/src/assets/styles.scss
+++ b/client2/src/assets/styles.scss
@@ -11,6 +11,18 @@ html {
 }
 
 #info-page {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    width: 85%;
+  }
+
+  @media screen and (min-width: 1904px) {
+    width: 60%;
+  }
+
   .info-table-column-header {
     font-weight: bold !important;
     text-transform: uppercase !important;
@@ -42,12 +54,56 @@ html {
       > div:last-child {
         width: 50%;
 
-        > div {
-          width: 33.33%;
-          width: calc(100% / 3);
-          padding-left: 1rem;
+        &.onequarter {
+          > div {
+            width: 25%;
+            padding-left: 1rem;
+          }
+        }
+
+        &.onethird {
+          > div {
+            width: 33.33%;
+            width: calc(100% / 3);
+            padding-left: 1rem;
+          }
+        }
+
+        &.onehalf {
+          > div {
+            width: 50%;
+            padding-left: 1rem;
+          }
         }
       }
     }
+  }
+
+  .info-table-row {
+    cursor: pointer;
+  }
+}
+
+.info-dialog {
+  border-radius: 4px;
+  max-width: 550px;
+
+  .v-card__title {
+    font-weight: bold;
+  }
+
+  .v-list__tile__title {
+    font-weight: bold;
+  }
+
+  .v-list__tile__sub-title {
+    padding-left: 15px;
+  }
+
+  .close-dialog {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
   }
 }
