--- a/client/src/assets/styles.scss
+++ b/client/src/assets/styles.scss
@@ -1,4 +1,5 @@
 @import './info_dialog.scss';
+@import './info_page.scss';
 @import './tooltip.scss';
 
 html {
@@ -22,117 +23,5 @@ html {
   .headline {
     font-weight: bold;
     padding-bottom: 0;
-  }
-}
-
-#info-page {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-
-  @media screen and (min-width: 768px) {
-    width: 85%;
-  }
-
-  @media screen and (min-width: 1904px) {
-    width: 60%;
-  }
-
-  .info-table-column-header {
-    font-weight: bold !important;
-    text-transform: uppercase !important;
-  }
-
-  #filter-controls {
-    display: flex;
-    flex-wrap: wrap;
-
-    > div:first-child,
-    > div:last-child {
-      width: 100%;
-
-      > div {
-        width: 100%;
-      }
-    }
-
-    > div:last-child {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    @media screen and (min-width: 768px) {
-      > div:first-child {
-        width: 50%;
-      }
-
-      > div:last-child {
-        width: 50%;
-
-        &.onequarter {
-          > div {
-            width: 25%;
-            padding-left: 1rem;
-          }
-        }
-
-        &.onethird {
-          > div {
-            width: 33.33%;
-            width: calc(100% / 3);
-            padding-left: 1rem;
-          }
-        }
-
-        &.onehalf {
-          > div {
-            width: 50%;
-            padding-left: 1rem;
-          }
-        }
-
-        &.whole {
-          > div {
-            width: 100%;
-            padding-left: 1rem;
-          }
-        }
-      }
-    }
-  }
-
-  .info-table-row {
-    cursor: pointer;
-  }
-
-  .info-list {
-    background: transparent !important;
-
-    .info-list-tile {
-      .v-list__tile {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
-
-        .v-list__tile__title {
-          margin-bottom: 1rem;
-        }
-
-        .v-list__tile__sub-title {
-          > div {
-            margin-bottom: 0.5rem;
-          }
-        }
-      }
-
-      &:not(:last-child) {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-
-        .v-list__tile__sub-title {
-          div:last-child {
-            margin-bottom: 0;
-          }
-        }
-      }
-    }
   }
 }
