Added stylings for the race info page

--- a/client/src/assets/info_page.scss
+++ b/client/src/assets/info_page.scss
@@ -123,4 +123,67 @@
       }
     }
   }
+
+  .details-info-row {
+    display: flex;
+    flex-wrap: wrap;
+
+    .details-info-entry {
+      width: 100%;
+
+      .details-info-entry-title {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+        font-weight: bold;
+        font-size: 1.25rem;
+        margin-bottom: 0.5rem;
+        padding-bottom: 0.5rem;
+      }
+
+      .details-info-entry-content {
+        padding-left: 15px;
+
+        > div:not(:last-child) {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+
+    @media screen and (max-width: 767px) {
+      .details-info-entry {
+        margin-bottom: 1rem;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 2rem;
+
+      &.thirds {
+        .details-info-entry {
+          width: 33.33%;
+          width: calc(100% / 3);
+        }
+      }
+
+      &.half {
+        .details-info-entry {
+          width: 50%;
+        }
+      }
+
+      &.whole {
+        .details-info-entry {
+          width: 100%;
+        }
+      }
+
+      .details-info-entry {
+        &:not(:first-child) {
+          padding-left: 0.5rem;
+        }
+        &:not(:last-child) {
+          padding-right: 0.5rem;
+        }
+      }
+    }
+  }
 }
