Began creating class page

--- a/client/src/assets/info_page.scss
+++ b/client/src/assets/info_page.scss
@@ -146,6 +146,16 @@
           margin-bottom: 0.5rem;
         }
 
+        .proficiency-list {
+          &:not(:last-child) {
+            margin-bottom: 0.5rem;
+          }
+        }
+
+        .select-from {
+          font-weight: bold;
+        }
+
         table {
           width: 100%;
 
