--- a/client/src/assets/styles.scss
+++ b/client/src/assets/styles.scss
@@ -31,6 +31,21 @@ html {
   margin-bottom: 1rem;
 }
 
+.dynamic-row {
+  display: flex;
+  flex-wrap: wrap;
+
+  .col {
+    flex: 1 1 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    .col {
+      flex: 1 1 auto;
+    }
+  }
+}
+
 ul {
   &.list {
     list-style: none;
