Added range values to weapons; increased padding in dialog; removed dividers in dialog

--- a/client/src/assets/info_dialog.scss
+++ b/client/src/assets/info_dialog.scss
@@ -13,6 +13,11 @@
     font-weight: bold;
   }
 
+  .v-card__text {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
   // Flex-based Dialogs
   .info-dialog-flex {
     .row {
