--- a/client/src/assets/styles.scss
+++ b/client/src/assets/styles.scss
@@ -1,80 +1,6 @@
-@import './info_dialog.scss';
-@import './info_page.scss';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 @import './tooltip.scss';
 
-html {
-  font-size: initial;
-  overflow-y: auto;
-}
-
-body {
-  background-color: #FCF4DF;
-}
-
-.v-icon {
-  font-size: 16px;
-}
-
-.w-full {
-  width: 100% !important;
-}
-
-.whitespace {
-  white-space: pre-wrap !important;
-}
-
-.has-popover {
-  border-bottom: 1px dotted rgba(0, 0, 0, 0.8);
-  cursor: help;
-}
-
-.popover-card {
-  .headline {
-    font-weight: bold;
-    padding-bottom: 0;
-  }
-}
-
-.page-title {
-  margin-bottom: 1rem;
-}
-
-.dynamic-row {
-  display: flex;
-  flex-wrap: wrap;
-
-  .col {
-    flex: 1 1 100%;
-  }
-
-  @media screen and (min-width: 768px) {
-    .col {
-      flex: 1 1 auto;
-    }
-  }
-}
-
-ul {
-  &.list {
-    list-style: none;
-    padding: 0;
-
-    li {
-      padding-left: 1.3em;
-      display: flex;
-
-      &:before {
-        content: "\f0c8"; // FontAwesome Unicode
-        display: flex;
-        align-items: center;
-        font-family: "Font Awesome 5 Free";
-        font-size: 0.5rem;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 900; // 900 (Solid), 400 (Regular or Brands), 300 (Light)
-        margin-left: -1rem; // same as padding-left set on li
-        width: 1rem; // same as padding-left set on li
-      }
-    }
-  }
-}
