--- a/client/src/assets/tooltip.scss
+++ b/client/src/assets/tooltip.scss
@@ -1,4 +1,4 @@
-[tooltip] {
+[data-tooltip] {
   position: relative;
 
   &::after {
@@ -44,7 +44,7 @@
   }
 }
 
-[tooltip-inverted=''] {
+[data-tooltip-inverted=''] {
   &::after {
     background-color: #aaa;
     color: #1A202C;
@@ -55,7 +55,7 @@
   }
 }
 
-[tooltip-position="bottom"] {
+[data-tooltip-position="bottom"] {
   &::after {
     margin-top: 8px;
     top: 100%;
@@ -69,7 +69,7 @@
   }
 }
 
-[tooltip-position="left"] {
+[data-tooltip-position="left"] {
   &::after {
     left: 0;
     margin-left: -8px;
@@ -85,7 +85,7 @@
   }
 }
 
-[tooltip-position="right"] {
+[data-tooltip-position="right"] {
   &::after {
     left: 100%;
     margin-left: 8px;
@@ -101,7 +101,7 @@
   }
 }
 
-[tooltip-position="top"] {
+[data-tooltip-position="top"] {
   &::after,
   &::before {
     left: 50%;
