--- a/client/src/assets/button.scss
+++ b/client/src/assets/button.scss
@@ -1,11 +1,71 @@
 .btn {
-  @apply rounded bg-gray-400 px-4 py-1 shadow;
+  @apply rounded bg-gray-400 px-4 py-1 shadow text-black font-bold;
 
   &:hover, &:focus {
     @apply bg-gray-500;
   }
 
   &:active {
-    @apply bg-gray-300;
+    @apply bg-gray-600;
+  }
+
+  &.loading {
+    color: transparent !important;
+    cursor: default;
+    opacity: 1;
+    pointer-events: auto;
+    position: relative;
+    text-shadow: none !important;
+    transition: all 0s linear, opacity .1s ease;
+
+    &::after {
+      animation: button-spin .6s linear;
+      animation-iteration-count: infinite;
+      border-color: white transparent transparent;
+      border-radius: 500rem;
+      border-style: solid;
+      border-width: .2em;
+      box-shadow: 0px 0px 0px 1px transparent;
+      content: '';
+      height: 1.28571429em;
+      left: 50%;
+      margin: -.64285714em 0 0 -.64285714em;
+      position: absolute;
+      top: 50%;
+      width: 1.28571429em;
+    }
+
+    &::before {
+      border: .2em solid rgba(0, 0, 0, .15);
+      border-radius: 500rem;
+      content: '';
+      height: 1.28571429em;
+      left: 50%;
+      margin: -.64285714em 0 0 -.64285714em;
+      position: absolute;
+      top: 50%;
+      width: 1.28571429em;
+    }
+  }
+}
+
+.btn--primary {
+  @apply bg-indigo-400 text-white;
+
+  &:hover, &:focus {
+    @apply bg-indigo-500;
+  }
+
+  &:active {
+    @apply bg-indigo-600;
+  }
+}
+
+@keyframes button-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
