A little more adding on

--- a/client/src/assets/styles.scss
+++ b/client/src/assets/styles.scss
@@ -20,6 +20,10 @@
     flex-basis: 100%;
   }
 
+  .flex-basis-half {
+    flex-basis: 50%;
+  }
+
   .flex-basis-auto {
     flex-basis: auto;
   }
