--- a/client/src/assets/button.scss
+++ b/client/src/assets/button.scss
@@ -1,5 +1,5 @@
 .btn {
-  @apply rounded bg-gray-400 px-4 py-1 shadow text-black;
+  @apply rounded bg-gray-400 px-4 py-1 text-black;
 
   &:hover, &:focus {
     @apply bg-gray-500;
@@ -19,7 +19,7 @@
     transition: all 0s linear, opacity .1s ease;
 
     &::after {
-      animation: button-spin .6s linear;
+      animation: spin .6s linear;
       animation-iteration-count: infinite;
       border-color: white transparent transparent;
       border-radius: 500rem;
@@ -61,7 +61,7 @@
   }
 }
 
-@keyframes button-spin {
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
