--- a/client/src/assets/navbar.scss
+++ b/client/src/assets/navbar.scss
@@ -5,7 +5,7 @@
     @apply flex flex-1;
 
     .navbar__dropdown__content {
-      left: 0;
+      @apply left-0;
     }
   }
 
@@ -13,7 +13,7 @@
     @apply flex;
 
     .navbar__dropdown__content {
-      right: 0;
+      @apply right-0;
     }
   }
 
