--- a/client/src/assets/navbar.scss
+++ b/client/src/assets/navbar.scss
@@ -1,8 +1,8 @@
 .navbar {
-  @apply border-t border-b;
+  @apply border-t border-b w-full flex-row flex-no-wrap items-center justify-between px-4;
 
   .navbar__left {
-    @apply flex flex-1;
+    @apply flex flex-1 justify-start;
 
     .navbar__dropdown__content {
       @apply left-0;
@@ -10,7 +10,7 @@
   }
 
   .navbar__right {
-    @apply flex;
+    @apply flex flex-1 justify-end;
 
     .navbar__dropdown__content {
       @apply right-0;
