--- a/client/src/assets/navbar.scss
+++ b/client/src/assets/navbar.scss
@@ -21,7 +21,7 @@
     @apply p-4 cursor-pointer;
 
     &:hover {
-      background-color: rgba(167,182,194,.3);
+      background-color: rgba(167, 182, 194, .3);
     }
   }
 }
