--- a/client/src/assets/styles.scss
+++ b/client/src/assets/styles.scss
@@ -5,6 +5,7 @@
 @import './alert.scss';
 @import './button.scss';
 @import './input.scss';
+@import './list.scss';
 @import './navbar.scss';
 @import './table.scss';
 @import './tooltip.scss';
