--- a/client/src/assets/button.scss
+++ b/client/src/assets/button.scss
@@ -1,5 +1,7 @@
 .btn {
-  @apply rounded bg-gray-400 px-4 py-2 text-black;
+  @apply bg-gray-400 text-black;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
 
   &:hover, &:focus {
     @apply bg-gray-500;
