--- a/client/src/assets/table.scss
+++ b/client/src/assets/table.scss
@@ -1,9 +1,11 @@
 .items-list {
-  @apply max-w-full overflow-x-auto w-full;
+  max-width: 100%;
+  overflow-x: auto;
+  width: 100%;
 
   .items-list__table {
-    @apply w-full;
     min-width: 800px;
+    width: 100%;
 
     thead {
       tr {
@@ -13,7 +15,7 @@
               &::after {
                 color: rgba(0, 0, 0, .25);
                 content: '\f0dc';
-                font-family: "Font Awesome 5 Free";
+                font-family: 'Font Awesome 5 Free';
                 font-weight: 900;
               }
 
@@ -26,7 +28,7 @@
               &.desc {
                 &::after {
                   content: '\f0d7';
-                  font-family: "Font Awesome 5 Free";
+                  font-family: 'Font Awesome 5 Free';
                   font-weight: 900;
                 }
               }
@@ -34,7 +36,7 @@
               &.asc {
                 &::after {
                   content: '\f0d8';
-                  font-family: "Font Awesome 5 Free";
+                  font-family: 'Font Awesome 5 Free';
                   font-weight: 900;
                 }
               }
@@ -57,7 +59,10 @@
     }
 
     th, td {
-      @apply border border-gray-400 cursor-pointer p-2;
+      @apply border-gray-400;
+      border-width: 1px;
+      cursor: pointer;
+      padding: 0.5rem;
     }
   }
 }
